tests/syntax-error/syntax-error.arr
use context essentials2020

provide: returns-true eend

fun returns-true():
  true
end
